--- a/app/src/main/res/layout/activity_keliling_psg.xml
+++ b/app/src/main/res/layout/activity_keliling_psg.xml
@@ -23,7 +23,7 @@
                 <ImageView
                     android:id="@+id/imgPsg"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="250dp"
                     android:layout_centerHorizontal="true"
                     android:layout_centerVertical="false"
                     android:src="@drawable/persegi">
@@ -95,7 +95,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="@string/h_kellng"
+                    android:text="@string/htg_kliling"
                     android:textSize="22dp">
 
                 </Button>
