--- a/app/src/main/res/layout/activity_luas_lingkrn.xml
+++ b/app/src/main/res/layout/activity_luas_lingkrn.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LuasPsg">
-
+    tools:context=".LuasLingkrn">
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -21,12 +20,12 @@
                 android:layout_height="wrap_content">
 
                 <ImageView
-                    android:id="@+id/imgPsg"
+                    android:id="@+id/imgLngkrn"
                     android:layout_width="wrap_content"
                     android:layout_height="250dp"
                     android:layout_centerHorizontal="true"
                     android:layout_centerVertical="false"
-                    android:src="@drawable/persegi">
+                    android:src="@drawable/lingkrn">
 
                 </ImageView>
             </RelativeLayout>
@@ -42,7 +41,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="@string/luasPsg"
+                    android:text="@string/luaslngkrn"
                     android:textSize="25dp"
                     android:textStyle="bold"
 
@@ -57,10 +56,18 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_width="100dp"
+                    android:layout_height="70dp"
                     android:paddingBottom="10dp"
-                    android:text="@string/msknSisi"
+                    android:text="@string/mskn_jari2"
+                    android:textSize="20dp" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="15dp"
+                    android:paddingEnd="15dp"
+                    android:paddingBottom="10dp"
+                    android:text="@string/titik2"
                     android:textSize="20dp" />
 
                 <LinearLayout
